--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: yunono-youtube
+    name: ynn-ytb
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python app.py"
@@ -8,5 +8,3 @@ services:
     envVars:
       - key: FLASK_ENV
         value: production
-    regions:
-      - oregon
